# opensourcecobol4j-c-glue

./: .gitignore  .gitmodules  Cargo.toml  CobolRunnableCGlue.java  LICENSE  Makefile  README.md  custom.h  prog.cbl  test.sh
.github/workflows/: ci.yml
src/: cfunc.rs  cparam.rs  java_type.rs  main.rs
tests/basic/: basic.c  header.h
