[package]
name = "opensourcecobol4j-c-glue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.10"
tree-sitter-c = "0.20.4"
rustop = "1.1.2"
yaml-rust = "0.4.5"
unwrap_or = "1.0.1"

[build-dependencies]
cc = "*"

[[bin]]
name = "cobj-c-glue"
test = false
bench = false
path = "src/main.rs"
